list view smaller to avoid wrapping during edit

--- a/branches/honeycrm_r134_gwt2.1m2/war/custom.css
+++ b/branches/honeycrm_r134_gwt2.1m2/war/custom.css
@@ -166,7 +166,7 @@ body {
 .list_view {
 	float: left;
 	padding: 5px;
-	width: 50%;
+	width: 40%;
 }
 
 .under_list_panel {
